{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "54ccee97-23fe-4735-b858-31a10427bda6",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "0696e3af-c40a-4c79-9458-fe31e787f588",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "b6835efb-23b3-4569-b63a-419f021ba9cc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e86542f0-e216-4f91-984b-0d16f5a1fc34",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab9a356c-035d-4fa4-871d-0cb9d2c75d79",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}